--- a/floorplan.html
+++ b/floorplan.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+     <!-- Compiled and minified CSS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+             
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <form class="form-inline">
-            <a class="btn btn-primary" href="index.html" role="button">Home</a>
-            <a class="btn btn-primary" href="gallery.html" role="button">Gallery</a>
-            <a class="btn btn-primary" href="floorplan.html" role="button">Floor Plan</a>
-            <a class="btn btn-primary" href="details.html" role="button">Details</a>
-            <a class="btn btn-primary" href="contactus.html" role="button">Contact Us</a>
-        </form>
-      </nav>
+    
 </body>
 </html>
