--- a/contactus.html
+++ b/contactus.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo center">Name Goes Here</a>
+            <a href="index.html" class="brand-logo center">Company/Logo</a>
         </div>
     </nav>
     <div class="button-holder">
