basic framework for gallery. need to work on passing thumbnail image to modal after onclick

--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,41 @@
         <button><a href="details.html">Details</a></button>
         <button><a href="contactus.html">Contact Us</a></button>
     </div>
+
+    <div class="container">
+        <div class="banner-container">
+            <img class="banner" src="http://via.placeholder.com/300" alt="Banner Image">
+        </div>
+        <div class="thumbnail-container">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+            <img class="thumbnail modal-trigger" src="http://via.placeholder.com/300" alt="Thumbnail Image">
+        </div>
+    </div>
+
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <img src="http://via.placeholder.com/300" alt="Modal Image">
+        </div>
+        <div class="modal-footer">
+            <a class="modal-close waves-effect waves-red btn-flat">Submit</a>
+        </div>
+    </div>
     
     <footer class="page-footer" class="container">
         <div class="container">
