--- a/floorplan.html
+++ b/floorplan.html
@@ -24,11 +24,11 @@
             <a href="index.html" class="brand-logo center">Company/Logo</a>
         </div>
     </nav>
-    <div class="button-holder">
-        <button><a href="gallery.html">Gallery</a></button>
-        <button><a href="floorplan.html">Floor Plan</a></button>
-        <button><a href="details.html">Details</a></button>
-        <button><a href="contactus.html">Contact Us</a></button>
+    <div class="button-holder row">
+        <button class="col 3"><a href="gallery.html">Gallery</a></button>
+        <button class="col 3"><a href="floorplan.html">Floor Plan</a></button>
+        <button class="col 3"><a href="details.html">Details</a></button>
+        <button class="col 3"><a href="contactus.html">Contact Us</a></button>
     </div>
 
     <footer class="page-footer" class="container">
