--- a/gallery.html
+++ b/gallery.html
@@ -24,15 +24,15 @@
             <a href="index.html" class="brand-logo center">Company/Logo</a>
         </div>
     </nav>
-    <div class="button-holder">
-        <button><a href="gallery.html">Gallery</a></button>
-        <button><a href="floorplan.html">Floor Plan</a></button>
-        <button><a href="details.html">Details</a></button>
-        <button><a href="contactus.html">Contact Us</a></button>
+    <div class="button-holder row">
+        <button class="col 3"><a href="gallery.html">Gallery</a></button>
+        <button class="col 3"><a href="floorplan.html">Floor Plan</a></button>
+        <button class="col 3"><a href="details.html">Details</a></button>
+        <button class="col 3"><a href="contactus.html">Contact Us</a></button>
     </div>
 
     <div class="container">
-        <div class="banner-container">
+        <div class="banner-container row">
             <img class="banner" src="http://via.placeholder.com/300" alt="Banner Image">
         </div>
         <div class="thumbnail-container">
