--- a/gallerytest.html
+++ b/gallerytest.html
@@ -32,6 +32,45 @@
     </div>
 
     <div class="container">
+
+        <!-- Modal Trigger -->
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+        <!-- Modal Structure -->
+        <div id="modal1" class="modal modal-fixed-footer">
+            <div class="modal-content">
+                <div class="carousel carousel-slider center">
+                    <div class="carousel-fixed-item center">
+                      <a class="btn waves-effect white grey-text darken-text-2">button</a>
+                    </div>
+                    <div class="carousel-item red white-text" href="#one!">
+                      <h2>First Panel</h2>
+                      <p class="white-text">This is your first panel</p>
+                    </div>
+                    <div class="carousel-item amber white-text" href="#two!">
+                      <h2>Second Panel</h2>
+                      <p class="white-text">This is your second panel</p>
+                    </div>
+                    <div class="carousel-item green white-text" href="#three!">
+                      <h2>Third Panel</h2>
+                      <p class="white-text">This is your third panel</p>
+                    </div>
+                    <div class="carousel-item blue white-text" href="#four!">
+                      <h2>Fourth Panel</h2>
+                      <p class="white-text">This is your fourth panel</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+        </div>
+
+    </div>
+
+
+<!-- 
+    <div class="container">
         <div class="banner-container row">
             <img class="banner" src="http://via.placeholder.com/300" alt="Banner Image">
         </div>
@@ -64,7 +103,7 @@
         <div class="modal-footer">
             <a class="modal-close waves-effect waves-red btn-flat">Submit</a>
         </div>
-    </div>
+    </div> -->
     
     <footer class="page-footer" class="container">
         <div class="container">
@@ -72,6 +111,18 @@
             <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
         </div>
     </footer>
+
+    <script>
+      $(document).ready(function(){
+    $('.modal').modal();
+    $('.carousel.carousel-slider').carousel({
+    fullWidth: true,
+    indicators: true
+  });
+  });
+
+    </script>
+    <script type="text/javascript" src="js/app.js"></script>
+
 </body>
-<script type="text/javascript" src="js/app.js"></script>
 </html>
