added functioning previous and next buttons

--- a/gallerytest3.html
+++ b/gallerytest3.html
@@ -73,6 +73,11 @@
               </ul>
             </div>
 
+            <div class="col s12 center">
+              <button class="prev z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-left fa-lg grey-text text-lighten-3">Previous</i></button>
+              <button class="next z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-right fa-lg grey-text text-lighten-1">Next</i></button>
+            </div>
+
           </div>  
 
         </div>
@@ -89,9 +94,6 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script>
 
-
-    </script>
 </body>
 </html>
