--- a/gallerytest3.html
+++ b/gallerytest3.html
@@ -43,7 +43,7 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+                  <img src="images/1.jpg"> <!-- random image -->
                   <div class="caption center-align">
                     <h3>This is our big Tagline!</h3>
                     <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
