--- a/gallerytest3.html
+++ b/gallerytest3.html
@@ -44,10 +44,15 @@
               <ul class="slides">
                 <li>
                   <img src="images/1.jpg"> <!-- random image -->
-                  <div class="caption center-align">
-                    <h3>This is our big Tagline!</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                  </div>
+                </li>
+                <li>
+                  <img src="images/2.jpg"> <!-- random image -->
+                </li>
+                <li>
+                  <img src="images/3.jpg"> <!-- random image -->
+                </li>
+                <li>
+                  <img src="images/4.jpg"> <!-- random image -->
                 </li>
                 <li>
                   <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
