--- a/gallery.html
+++ b/gallery.html
@@ -42,39 +42,46 @@
 
             <div class="slider">
               <ul class="slides">
-                <li>
-                  <img src="images/1.jpg"> <!-- random image -->
-                </li>
-                <li>
-                  <img src="images/2.jpg"> <!-- random image -->
-                </li>
-                <li>
-                  <img src="images/3.jpg"> <!-- random image -->
-                </li>
-                <li>
-                  <img src="images/4.jpg"> <!-- random image -->
-                </li>
-                <li>
-                  <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
-                  <div class="caption left-align">
-                    <h3>Left Aligned Caption</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                  </div>
-                </li>
-                <li>
-                  <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
-                  <div class="caption right-align">
-                    <h3>Right Aligned Caption</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                  </div>
-                </li>
-                <li>
-                  <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
-                  <div class="caption center-align">
-                    <h3>This is our big Tagline!</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                  </div>
-                </li>
+                <li><img src="images/1.jpg"></li>
+                <li><img src="images/2.jpg"></li>
+                <li><img src="images/3.jpg"></li>
+                <li><img src="images/4.jpg"></li>
+                <li><img src="images/5.jpg"></li>
+                <li><img src="images/6.jpg"></li>
+                <li><img src="images/7.jpg"></li>
+                <li><img src="images/8.jpg"></li>
+                <li><img src="images/9.jpg"></li>
+                <li><img src="images/10.jpg"></li>
+                <li><img src="images/11.jpg"></li>
+                <li><img src="images/12.jpg"></li>
+                <li><img src="images/13.jpg"></li>
+                <li><img src="images/14.jpg"></li>
+                <li><img src="images/15.jpg"></li>
+                <li><img src="images/16.jpg"></li>
+                <li><img src="images/17.jpg"></li>
+                <li><img src="images/18.jpg"></li>
+                <li><img src="images/19.jpg"></li>
+                <li><img src="images/20.jpg"></li>
+                <li><img src="images/21.jpg"></li>
+                <li><img src="images/22.jpg"></li>
+                <li><img src="images/23.jpg"></li>
+                <li><img src="images/24.jpg"></li>
+                <li><img src="images/25.jpg"></li>
+                <li><img src="images/26.jpg"></li>
+                <li><img src="images/27.jpg"></li>
+                <li><img src="images/28.jpg"></li>
+                <li><img src="images/29.jpg"></li>
+                <li><img src="images/30.jpg"></li>
+                <li><img src="images/31.jpg"></li>
+                <li><img src="images/32.jpg"></li>
+                <li><img src="images/33.jpg"></li>
+                <li><img src="images/34.jpg"></li>
+                <li><img src="images/35.jpg"></li>
+                <li><img src="images/36.jpg"></li>
+                <li><img src="images/37.jpg"></li>
+                <li><img src="images/38.jpg"></li>
+                <li><img src="images/39.jpg"></li>
+                <li><img src="images/40.jpg"></li>
               </ul>
             </div>
 
