removed carousel on index and added slider with limited images. changed header and footer color

--- a/index.html
+++ b/index.html
@@ -30,10 +30,56 @@
         <button class="col 3"><a href="contactus.html">Contact Us</a></button>
     </div>
 
-    <div class="carousel">
-        <a class="carousel-item" href="#one!"><img src="http://via.placeholder.com/300" alt="carousel image"></a>
-        <a class="carousel-item" href="#two!"><img src="http://via.placeholder.com/300" alt="carousel image"></a>
-        <a class="carousel-item" href="#three!"><img src="http://via.placeholder.com/300" alt="carousel image"></a>        
+    <div class="container" style="margin-top:35px">
+        <div class="slider">
+            <ul class="slides">
+            <li><img src="images/1.jpg"></li>
+            <li><img src="images/2.jpg"></li>
+            <li><img src="images/3.jpg"></li>
+            <li><img src="images/4.jpg"></li>
+            <li><img src="images/5.jpg"></li>
+            <!-- <li><img src="images/6.jpg"></li>
+            <li><img src="images/7.jpg"></li>
+            <li><img src="images/8.jpg"></li>
+            <li><img src="images/9.jpg"></li>
+            <li><img src="images/10.jpg"></li>
+            <li><img src="images/11.jpg"></li>
+            <li><img src="images/12.jpg"></li>
+            <li><img src="images/13.jpg"></li>
+            <li><img src="images/14.jpg"></li>
+            <li><img src="images/15.jpg"></li>
+            <li><img src="images/16.jpg"></li>
+            <li><img src="images/17.jpg"></li>
+            <li><img src="images/18.jpg"></li>
+            <li><img src="images/19.jpg"></li>
+            <li><img src="images/20.jpg"></li>
+            <li><img src="images/21.jpg"></li>
+            <li><img src="images/22.jpg"></li>
+            <li><img src="images/23.jpg"></li>
+            <li><img src="images/24.jpg"></li>
+            <li><img src="images/25.jpg"></li>
+            <li><img src="images/26.jpg"></li>
+            <li><img src="images/27.jpg"></li>
+            <li><img src="images/28.jpg"></li>
+            <li><img src="images/29.jpg"></li>
+            <li><img src="images/30.jpg"></li>
+            <li><img src="images/31.jpg"></li>
+            <li><img src="images/32.jpg"></li>
+            <li><img src="images/33.jpg"></li>
+            <li><img src="images/34.jpg"></li>
+            <li><img src="images/35.jpg"></li>
+            <li><img src="images/36.jpg"></li>
+            <li><img src="images/37.jpg"></li>
+            <li><img src="images/38.jpg"></li>
+            <li><img src="images/39.jpg"></li>
+            <li><img src="images/40.jpg"></li> -->
+            </ul>
+        </div>
+
+        <!-- <div class="col s12 center">
+            <button class="prev z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-left fa-lg grey-text text-lighten-3">Previous</i></button>
+            <button class="next z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-right fa-lg grey-text text-lighten-1">Next</i></button>
+        </div> -->
     </div>
 
     <div class="row">
@@ -101,12 +147,9 @@
         </div>
     </footer>
     
-</body>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.carousel');
-        var instances = M.Carousel.init(elems, dist="0");
-    });
-</script>   
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 
+</body>
 </html>
