Adjusted button links so entire button functions as a link

--- a/contactus.html
+++ b/contactus.html
@@ -25,10 +25,10 @@
         </div>
     </nav>
     <div class="button-holder row">
-        <button class="col 3"><a href="gallery.html">Gallery</a></button>
-        <button class="col 3"><a href="floorplan.html">Floor Plan</a></button>
-        <button class="col 3"><a href="details.html">Details</a></button>
-        <button class="col 3"><a href="contactus.html">Contact Us</a></button>
+        <a href="gallery.html"><button class="col 3">Gallery</button></a>
+        <a href="floorplan.html"><button class="col 3">Floor Plan</button></a>
+        <a href="details.html"><button class="col 3">Details</button></a>
+        <a href="contactus.html"><button class="col 3">Contact Us</button></a>
     </div>
     <!-- Contact Us -->
     <div class= "container" id="form-wrapper">
