--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </div>
     
     <div class="button-holder row">
-        <button class="col 3"><a href="gallery.html">Gallery</a></button>
-        <button class="col 3"><a href="floorplan.html">Floor Plan</a></button>
-        <button class="col 3"><a href="details.html">Details</a></button>
-        <button class="col 3"><a href="contactus.html">Contact Us</a></button>
+        <a href="gallery.html"><button class="col 3">Gallery</button></a>
+        <a href="floorplan.html"><button class="col 3">Floor Plan</button></a>
+        <a href="details.html"><button class="col 3">Details</button></a>
+        <a href="contactus.html"><button class="col 3">Contact Us</button></a>
     </div>
 
     <div class="container" style="margin-top:35px">
