Added container around cards to leave sidebars as white space

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <nav>
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo center">Company/Logo</a>
+                <a href="index.html" class="brand-logo center"><img class="company-logo" src="https://resources.elliman.com/vow/i/l/elliman_logo.png?z=2018-06-05-7855" alt="Logo"></a>
             </div>
         </nav>
     </div>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="row">
-        <!-- <div class="container"> -->
+        <div class="container">
         <div class="col s12 m4">
         <div class="card biocard">
             <div class="card-image waves-effect waves-block waves-light">
@@ -141,7 +141,7 @@
             </div>
         </div>
     </div>
-    <!-- </div> -->
+    </div>
     </div>
     
     <div class="container">
