--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -78,6 +79,8 @@
             <li><img src="images/40.jpg"></li> -->
             </ul>
         </div>
+        <div class="arrows prev"></div>
+<div class="arrows next"></div>
 
         <!-- <div class="col s12 center">
             <button class="prev z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-left fa-lg grey-text text-lighten-3">Previous</i></button>
