Removed slider indicators, but previous and next buttons are not working

--- a/public/details.html
+++ b/public/details.html
@@ -19,11 +19,13 @@
     <title>Real Estate Template</title>
 </head>
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo center">Company/Logo</a>
-        </div>
-    </nav>
+    <div class="container">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="index.html" class="brand-logo center"><img class="company-logo" src="https://resources.elliman.com/vow/i/l/elliman_logo.png?z=2018-06-05-7855" alt="Logo"></a>
+            </div>
+        </nav>
+    </div>
     <div class="button-holder row">
         <a href="gallery.html"><button class="col 3">Gallery</button></a>
         <a href="floorplan.html"><button class="col 3">Floor Plan</button></a>
@@ -43,12 +45,14 @@
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     </div>
 
-    <footer class="page-footer" class="container">
-        <div class="container">
-            Some more text here
-            <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
-        </div>
-    </footer>
+    <div class="container">
+        <footer class="page-footer" class="container">
+            <div class="container">
+                Some more text here
+                <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
+            </div>
+        </footer>
+    </div>
     
 </body>
 <script type="text/javascript" src="js/app.js"></script>
