--- a/public/contactus.html
+++ b/public/contactus.html
@@ -19,11 +19,13 @@
     <title>Real Estate Template</title>
 </head>
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo center">Company/Logo</a>
-        </div>
-    </nav>
+    <div class="container">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="index.html" class="brand-logo center"><img class="company-logo" src="https://resources.elliman.com/vow/i/l/elliman_logo.png?z=2018-06-05-7855" alt="Logo"></a>
+            </div>
+        </nav>
+    </div>
     <div class="button-holder row">
         <a href="gallery.html"><button class="col 3">Gallery</button></a>
         <a href="floorplan.html"><button class="col 3">Floor Plan</button></a>
@@ -55,12 +57,14 @@
         </div>
     </div>
 
-    <footer class="page-footer" class="container">
-        <div class="container">
-            Some more text here
-            <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
-        </div>
-    </footer>
+    <div class="container">
+        <footer class="page-footer" class="container">
+            <div class="container">
+                Some more text here
+                <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
+            </div>
+        </footer>
+    </div>
     
 </body>
 <script type="text/javascript" src="js/app.js"></script>
