--- a/public/gallery.html
+++ b/public/gallery.html
@@ -112,7 +112,7 @@
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/gallery.js"></script>
 
 </body>
 </html>
