--- a/public/details.html
+++ b/public/details.html
@@ -34,15 +34,21 @@
     </div>
 
     <div class="container">
-        <img class="floorplan-banner" src="http://via.placeholder.com/300" alt="Banner Image">
-        <h3>Blah Blah</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <h3>Blah Blah</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <h3>Blah Blah</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <h3>Blah Blah</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <img class="floorplan-banner" src="images/1.jpg" alt="Banner Image">
+        <div class="details">
+            <h4>Property Details</h4>
+            <p>Enjoy the ultimate Miami Beach lifestyle in this iconic Art Deco landmark home, designed by renowned architect Robert E. Collins. This centrally located 1930's renovation is close by Lincoln Road & Miami Beach's best restaurants & nightclubs. Outfitted with the finest custom luxury finishes, gourmet Poggenpohl kitchen & Crestron sound system, it is the perfect house for entertaining in the heart of South Beach. Relax in this home with a privacy fence and luxurious backyard pool. This listing courtesy of Douglas Elliman</p>
+            <p>841 19th St - Miami Beach, Florida
+                    Price: $4,499,000
+                    Yearly Real Estate Tax: $55,236
+                    Neighborhood: Miami Beach
+                    House
+                    4 Beds | 4 Baths | 1 Half Bath
+                    Approximate Sq. Feet: 3,725
+                    Lot Size: 13500 Sq Ft
+                    Listing ID: A10416220</p>
+        </div>     
+        
     </div>
 
     <div class="container">
