styling, added genuine text content, trying to get modal to work properly

--- a/public/details.html
+++ b/public/details.html
@@ -36,26 +36,25 @@
     <div class="container">
         <img class="floorplan-banner" src="images/1.jpg" alt="Banner Image">
         <div class="details">
+            <h3 style="color: #009cbd; text-align: center;">841 19th St - Miami Beach, Florida</h3>
             <h4>Property Details</h4>
             <p>Enjoy the ultimate Miami Beach lifestyle in this iconic Art Deco landmark home, designed by renowned architect Robert E. Collins. This centrally located 1930's renovation is close by Lincoln Road & Miami Beach's best restaurants & nightclubs. Outfitted with the finest custom luxury finishes, gourmet Poggenpohl kitchen & Crestron sound system, it is the perfect house for entertaining in the heart of South Beach. Relax in this home with a privacy fence and luxurious backyard pool. This listing courtesy of Douglas Elliman</p>
-            <p>841 19th St - Miami Beach, Florida
-                    Price: $4,499,000
-                    Yearly Real Estate Tax: $55,236
-                    Neighborhood: Miami Beach
-                    House
-                    4 Beds | 4 Baths | 1 Half Bath
-                    Approximate Sq. Feet: 3,725
-                    Lot Size: 13500 Sq Ft
-                    Listing ID: A10416220</p>
+        <div style="text-align: center">
+            <p><strong>Price: </strong></p>$4,499,000
+            <p><strong>Yearly Real Estate Tax: </strong></p>$55,236
+            <p><strong>Neighborhood: </strong></p>Miami Beach
+            <p><strong>House: </strong></p>4 Beds | 4 Baths | 1 Half Bath
+            <p><strong>Approximate Sq. Feet: </strong></p>3,725
+            <p><strong>Lot Size: </strong></p>13500 Sq Ft
+            <p><strong>Listing ID: </strong></p>A10416220
         </div>     
-        
+        </div>
     </div>
-
     <div class="container">
         <footer class="page-footer" class="container">
             <div class="container">
-                Some more text here
-                <a class="grey-text text-lighten-4 right" href="#!">Company Name here</a>
+                Copyright 841 19th St, Miami Beach, Florida
+                <a class="grey-text text-lighten-4 right" href="https://www.elliman.com" targe="_blank">Douglas Elliman, Inc</a>
             </div>
         </footer>
     </div>
