Adjusted styling, removed caption from slider and put h3 above it on index

--- a/public/index.html
+++ b/public/index.html
@@ -34,14 +34,21 @@
         <a href="contactus.html"><button class="col 3">Contact Us</button></a>
     </div>
 
+    <h3 style="color: #009cbd; text-align: center;">841 19th St, Miami Beach, Florida</h3>
+
     <div class="container" style="margin-top:35px">
         <div class="slider">
             <ul class="slides">
-                <li><img src="images/1.jpg"></li>
-                <li><img src="images/2.jpg"></li>
-                <li><img src="images/3.jpg"></li>
-                <li><img src="images/5.jpg"></li>
-                <li><img src="images/11.jpg"></li>
+                <li><img src="images/1.jpg">
+                </li>
+                <li><img src="images/2.jpg">
+                </li>
+                <li><img src="images/3.jpg">
+                </li>
+                <li><img src="images/5.jpg">
+                </li>
+                <li><img src="images/11.jpg">
+                </li>
             </ul>  
         </div>
         
@@ -70,7 +77,7 @@
                             <p style="color: #009cbd;">O: 305.695.6300</p>
                             <p style="color: #009cbd;">M: 305.401.6100</p>
                             <br>
-                            <p class="modal-trigger" style="Color: #009cbd"><button class="email-modal-trigger email-button">Email Kayce</button></p>
+                            <a class="waves-effect waves-light btn modal-trigger1" href="#modal1" style="background-color: #009cbd !important; color: white !important;">Email Kayce</a>
                     </div>
                         <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4"><strong>About Kayce</strong><i class="material-icons right">close</i></span>
@@ -99,7 +106,7 @@
                         <p style="color: #009cbd;">O: 305.450.0855</p>
                         <p style="color: #009cbd;">M: 305.450.0855</p>
                         <br>
-                        <p style="Color: #009cbd"><button class="email-modal-trigger email-button">Email Liz</button></p>
+                        <a class="waves-effect waves-light btn modal-trigger2" href="#modal2" style="background-color: #009cbd !important; color: white !important;">Email Liz</a>
                 </div>
                 <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><strong>About Liz</strong><i class="material-icons right">close</i></span>
@@ -135,6 +142,32 @@
         </footer>
     </div>
     <div id="modal1" class="email-modal">
+            <div class="modal-content">
+                <h4 class="header2">Email Me!</h4>
+                <div class="row">
+                    <div class="col s12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input type="text" id="name-input" class="name">
+                                <label for="name-input">Name</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input type="text" id="email-input" class="email">
+                                <label for="email-input">Email</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input type="text" id="comment-input" class="comment">
+                                <label for="comment-input">Comment</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a class="modal-close waves-effect waves-red btn-flat">Submit</a>
+            </div>
+        </div>
+        <div id="modal2" class="email-modal">
             <div class="modal-content">
                 <h4 class="header2">Email Me!</h4>
                 <div class="row">
