--- a/public/details.html
+++ b/public/details.html
@@ -9,6 +9,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
@@ -35,21 +36,41 @@
 
     <div class="container">
         <img class="floorplan-banner" src="images/1.jpg" alt="Banner Image">
+        <hr>
         <div class="details">
-            <h3 style="color: #009cbd; text-align: center;">841 19th St - Miami Beach, Florida</h3>
-            <h4>Property Details</h4>
-            <p>Enjoy the ultimate Miami Beach lifestyle in this iconic Art Deco landmark home, designed by renowned architect Robert E. Collins. This centrally located 1930's renovation is close by Lincoln Road & Miami Beach's best restaurants & nightclubs. Outfitted with the finest custom luxury finishes, gourmet Poggenpohl kitchen & Crestron sound system, it is the perfect house for entertaining in the heart of South Beach. Relax in this home with a privacy fence and luxurious backyard pool. This listing courtesy of Douglas Elliman</p>
-        <div style="text-align: center">
-            <p><strong>Price: </strong></p>$4,499,000
-            <p><strong>Yearly Real Estate Tax: </strong></p>$55,236
-            <p><strong>Neighborhood: </strong></p>Miami Beach
-            <p><strong>House: </strong></p>4 Beds | 4 Baths | 1 Half Bath
-            <p><strong>Approximate Sq. Feet: </strong></p>3,725
-            <p><strong>Lot Size: </strong></p>13500 Sq Ft
-            <p><strong>Listing ID: </strong></p>A10416220
-        </div>     
+                <h3 style="color: #009cbd; text-align: center;">841 19th St - Miami Beach, Florida</h3>
+                <h4 style="text-align: center;">Property Details</h4>
+                <p>Enjoy the ultimate Miami Beach lifestyle in this iconic Art Deco landmark home, designed by renowned architect Robert E. Collins. This centrally located 1930's renovation is close by Lincoln Road & Miami Beach's best restaurants & nightclubs. Outfitted with the finest custom luxury finishes, gourmet Poggenpohl kitchen & Crestron sound system, it is the perfect house for entertaining in the heart of South Beach. Relax in this home with a privacy fence and luxurious backyard pool. This listing courtesy of Douglas Elliman</p>
+                <hr>
+            <div style="text-align: center;">
+                <h5>Price: </h5>
+                $4,499,000
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="s12 m4" style="float: left; text-align: center;">
+                        <h5>Yearly Real Estate Tax: </h5>
+                        <p>$55,236</p>
+                        <h5>Neighborhood: </h5>
+                        <p>Miami Beach</p>
+                        <h5>House: </h5>
+                        <p>4 Beds | 4 Baths | 1 Half Bath</p>
+                    </div>
+                    
+                    <div class="s12 m4" style="float: right; text-align: center;">
+                        <h5>Approximate Sq. Feet: </h5>
+                        <p>3,725</p>
+                        <h5>Lot Size: </h5>
+                        <p>13500 Sq Ft</p>
+                        <h5>Listing ID: </h5>
+                        <p>A10416220</p>
+                    </div> 
+                </div>  
+            </div>  
         </div>
+        <hr>
     </div>
+    <br>
     <div class="container">
         <footer class="page-footer" class="container">
             <div class="container">
