--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
@@ -16,7 +17,7 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
    
     
-    <title>Real Estate Template</title>
+    <title>Home - 841 19th St, Miami Beach, Florida</title>
 </head>
 <body>
     <div class="container">
@@ -60,9 +61,10 @@
             <button class="next z-depth-0 btn blue btn-flat center"><i class="fa fa-chevron-right fa-lg grey-text text-lighten-1">Next</i></button>
         </div> -->
     </div>
-
+    
     <div class="row">
         <div class="container">
+            <hr>
             <h3 style="text-align: center; color: #009cbd">Meet The Agents</h3>
             <div class="col s12 m6">
                 <div class="card biocard">
@@ -120,6 +122,7 @@
                 </div>
             </div>
         </div>
+        <hr>
         <h3 style="text-align: center"><a class="imdb" href="https://www.elliman.com/" target="_blank">Douglas Elliman, Inc.</a></h3>
             <p>
                 Established in 1911, Douglas Elliman Real Estate is the largest brokerage in the New York Metropolitan area and the third largest residential real estate company nationwide. With more than 7,000 agents, the company operates approximately 115 offices in New York City, Long Island, The Hamptons, Westchester, Connecticut, New Jersey, Florida, California, Colorado and Massachusetts. Moreover, Douglas Elliman has a strategic global alliance with London-based Knight Frank Residential for business in the worldwide luxury markets spanning 60 countries and six continents.
