--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
                             <!-- <a class="waves-effect waves-light btn modal-trigger1" href="#modal1" style="background-color: #009cbd !important; color: white !important;">Email Kayce</a> -->
                                             <!-- Modal Tripper -->
                       <!-- <a class="waves-effect waves-light btn modal-trigger2" href="#modal2" style="background-color: #009cbd !important; color: white !important;">Email Liz</a> -->
-                      <button data-target="modal1" class="btn modal-trigger">Modal</button>
+                      <button data-target="modal1" class="btn modal-trigger" style="background-color: #009cbd !important; color: white !important;">Email Kayce</button>
                         <!-- Modal structure -->
                       <div id="modal1" class="modal modal-fixed-footer">
                         <div class="modal-content">
@@ -143,7 +143,7 @@
                       <br>
                         <!-- Modal Tripper -->
                       <!-- <a class="waves-effect waves-light btn modal-trigger2" href="#modal2" style="background-color: #009cbd !important; color: white !important;">Email Liz</a> -->
-                      <button data-target="modal2" class="btn modal-trigger">Modal</button>
+                      <button data-target="modal2" class="btn modal-trigger" style="background-color: #009cbd !important; color: white !important;">Email Liz</button>
                         <!-- Modal structure -->
                       <div id="modal2" class="modal modal-fixed-footer">
                         <div class="modal-content">
